# multos-card-on-the-web

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  main.c  requirements.txt
Card-App/: Makefile  cli.py  hello-world.alu  hello-world.hzx  main.c  main.hzo  test.py
Card-App/config/: config.h
Card-App/include/: apdu.h  types.h
Card-App/include/models/: user.h
Card-App/lib/ecc/: multosecc.h
Card-App/lib/helpers/: mem_helper.h  random_helper.h
Card-Connector/: connector-client.py  connector.py  esteid_getcert.py  esteid_info.py  index.php
Python-App/: cli.py  connector-client.py  connector.py  main.py  test.py  test2.py
Python-App/LL-Smartcard-1.1/: text.txt
Python-App/LL-Smartcard-1.1/examples/: template.py
Python-App/LL-Smartcard-1.1/examples/common_access_card/: cac_crypto.py  cac_info.py
Python-App/LL-Smartcard-1.1/examples/credit_cards/: read_info.py
Python-App/LL-Smartcard-1.1/examples/fuzzing/: admin_probe.py  smartcard_fuzzer.py
Python-App/LL-Smartcard-1.1/examples/general/: pin_gemalto.py  scrath.py
Python-App/LL-Smartcard-1.1/llsmartcard/: apdu.py  card.py  parser.py
cmake/Modules/: FindMCL.cmake  FindPCSC.cmake
config/: config.h
include/: system.h  types.h
include/models/: user.h
include/multos/: apdu.h
lib/apdu/: command.c  command.h
lib/helpers/: hex_helper.c  hex_helper.h  mcl_helper.c  mcl_helper.h  multos_helper.c  multos_helper.h
lib/pcsc/: reader.c  reader.h
src/: setup.c  setup.h
src/controllers/: user.c  user.h
src/controllers/multos/: user.c  user.h
